# locdatakit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
examples/: README.md  example.gpx  places.yaml  zones.json
locdatakit/: __init__.py  cli.py  gpxtools.py  places.py  report.py
tests/: test_cli.py  test_places.py
