[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locdatakit"
version = "0.0.2"
description = "A Python toolkit and CLI for processing, analyzing, and reporting on location data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Tensegrity Labs" }]
dependencies = [
  "click>=8.1",
  "gpxpy",
  "pint",
  "geopy",
  "scipy",
  "pytz",
  "PyYAML",
]

[project.optional-dependencies]
here = [
  "here-location-services",
]
dev = [
  "build",
  "bump-my-version",
  "pytest",
]

[project.scripts]
locdatakit = "locdatakit.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["locdatakit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.0.2"
parse = """(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"""
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
allow_dirty = false
message = "Bump version: {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "locdatakit/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
